# ibus-bogo

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTE.md  CREDITS.md  DEPENDENCIES  INSTALL.md  Makefile  NEWS  README.md  build_debian.sh  daily_build.sh  install  installer.sh  launcher.sh  remove  setup.py  uninstaller.sh
bogo/: CMakeLists.txt  __init__.py  _separate.py  accent.py  bogo.py  mark.py  utils.py  valid_vietnamese.py  validation.py
bogo-python/: .coveragerc  .travis.yml
bogo-python/bogo/: __init__.py  accent.py  core.py  mark.py
bogo-python/bogo/test/: test_engine.py
bogo-python/bogo/test/sequences/: filter_duplicate.py  gen.py  vi.dic
bogo-python/doc/: bogo.rst  bogo.test.rst  conf.py  index.rst  make.bat
bogo/test/: DauCu.sequences  gen.py  test_engine.py  test_mark.py  test_utils.py  test_valid_vietnamese.py
bogo/test/sequences/: README.md  gen.py  gen_key_sequences.py  vi-DauCu.dic  vi-DauCu.dic.filtered
config-gui/: CMakeLists.txt  charset_converter.py  controller.pro  controller.py  controller.ui  ibus-bogo-settings  ibus-bogo-settings.desktop  tablemodel.py
config-gui/locales/: vi_VN.ts
debian/: changelog  control  copyright  daily_build.sh  docs  rules
doc/: CONTRIBUTE.md  INSTALL.md  MAINTAINTERS_GUIDE.md  Makefile  PACKAGING.md
doc/sphinx/: Makefile  conf.py  contributing.rst  index.rst  install.rst  usage.rst
engine/: BoGo.py  BoGoConfig.py  BoGoConfig.py.in  BoGoEngine.py  BoGoMain.py  BogoEngine.py  BogoMain.py  CMakeLists.txt  Charset.py  base_config.py  bogo-tcvn3.xml  bogo-utf8.xml  bogo.xml  bogo_engine.py  bogo_main.py  config.py  factory.py  ibus-engine-bogo  ibus_engine.py  keysyms_mapping.py  main.py  new_bogo_engine.py  valid_vietnamese.py
engine/bogo/: __init__.py  accent.py  bogo.py  mark.py  new_bogo_engine.py  utils.py  valid_vietnamese.py
engine/data/: bogo.xml  default_config.json  ibus-bogo.gschema.xml  ibus-engine-bogo
gui/: CMakeLists.txt  controller.py  controller.ui  ibus-bogo-settings  ibus-setup-bogo.desktop  tablemodel.py
gui/locales/: vi_VN.ts
gui/test/: __init__.py  test_tablemodel.py
ibus_engine/: CMakeLists.txt  __init__.py  __scratch.py  abbr.py  auto_corrector.py  base_backend.py  base_config.py  config.py  direct_backend.py  focus_tracker.py  get_raw_event.py  ibus_engine.py  ibus_template.py  keysyms_mapping.py  main.py  mouse_detector.py  preedit_backend.py  rules.json  surrounding_text_backend.py  test_surrounding.py  trayicon.py  ui.py
ibus_engine/data/: abbr_rules.json  bogo.xml  default_config.json  ibus-engine-bogo  vi_VN_telex.dic
ibus_engine/libs/: __init__.py
ibus_engine/test/: __init__.py  test_abbreviation.py  test_auto_corrector.py  test_base_backend.py  test_config.py  test_engine.py  test_preedit_backend.py  test_surrounding_text_backend.py
script/: README.md  build_debian.sh
test/: CONTRIBUTE.vni-win  __init__.py  gen_key_sequences.py  test_engine.py  test_gen_key_sequences.py  test_mark.py  test_utils.py  test_valid_vietnamese.py  test_vncharsets.py  tryout.sh
tests/: CMakeLists.txt  list  run_tests.sh  test  test_mark.py  test_new_bogo_engine.py  test_separate_myspell.py  test_separate_with_dict.py  test_utils.py  vi.dic.copyright
vncharsets/: CMakeLists.txt  __init__.py  base_charset.py  tcvn3.py  vni.py
vncharsets/charset-data/: TCVN3.json
vncharsets/test/: CONTRIBUTE.tcvn3  CONTRIBUTE.utf-8  CONTRIBUTE.vni-win  vi-DauCu.dic
